--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -18,6 +18,7 @@ body {
   font-family: "Roboto", sans-serif;
   font-size: 16px;
   color: $txt-main-color;
+  overflow-x: hidden;
 }
 h1,
 h2,
@@ -28,7 +29,10 @@ h6 {
   color: $txt-main-color;
 }
 h1 {
-  font-size: 40px;
+  font-size: 30px;
+  @include small {
+    font-size: 40px;
+  }
 }
 
 ul {
@@ -103,11 +107,15 @@ img {
 }
 
 .section_title {
-  font-size: 28px;
+  @include small {
+    font-size: 28px;
+  }
+  font-size: 24px;
   font-weight: 500;
   text-transform: uppercase;
   @include flex(center, center);
   margin-bottom: 50px;
+  text-align: center;
 }
 
 .grid {
