--- a/src/sass/components/_header-search-bar.scss
+++ b/src/sass/components/_header-search-bar.scss
@@ -8,7 +8,7 @@
   &_logo {
     height: 60px;
     img {
-      max-height: 100%;
+      height: 100%;
     }
   }
   &_input {
@@ -50,7 +50,7 @@
     @include flex-align(center);
     .user-name {
       @include flex-align(center);
-      margin-right: 35px;
+      margin-right: 15px;
       cursor: pointer;
       .icon {
         font-size: 28px;
@@ -63,6 +63,7 @@
     }
     .cart {
       @include flex-align(center);
+      margin-right: 10px;
       position: relative;
       cursor: pointer;
       span {
