--- a/src/sass/components/_hero-slider.scss
+++ b/src/sass/components/_hero-slider.scss
@@ -43,6 +43,10 @@
       margin-bottom: 20px;
     }
     p {
+      display: -webkit-box;
+      -webkit-line-clamp: 3;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
       margin-bottom: 20px;
       font-size: 18px;
       line-height: 26px;
@@ -131,8 +135,9 @@
 .hero_slider_control {
   position: absolute;
   cursor: pointer;
+  z-index: 99999;
   left: 50%;
-  bottom: 10px;
+  bottom: 22px;
   transform: translateX(-50%);
   @include flex-align(center);
   &_item {
