--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -14,11 +14,16 @@ html {
   font-size: 13px;
 }
 
+.over_flow {
+  overflow-x: hidden;
+  @include medium {
+    overflow-x: auto;
+  }
+}
 body {
   font-family: "Roboto", sans-serif;
   font-size: 16px;
   color: $txt-main-color;
-  overflow-x: hidden;
 }
 h1,
 h2,
