--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -20,6 +20,13 @@ html {
     overflow-x: auto;
   }
 }
+
+.ver_height {
+  height: 100vh;
+  width: 100%;
+  overflow-y: hidden;
+}
+
 body {
   font-family: "Roboto", sans-serif;
   font-size: 16px;
